# avgl

./: .cproject  .gitignore  .project  CMakeLists.txt  Makefile  README  README.md  av_config.h  av_config.h.in  avgl.prefs  avgl.xine.prefs  rockspec
cmake/: FindSDL2.cmake  FindSDL2Image.cmake
doc/: ChangeLog  Doxyfile  avgl.doxygen  header.html
example/: CMakeLists.txt  Makefile  image.U  image.V  image.Y
example/audio/: CMakeLists.txt  Makefile  audio.c
example/benchmark/: CMakeLists.txt  Makefile  sdlbench.c  stdout.txt
example/core/: CMakeLists.txt  Makefile  hash.c  hash.mak  list.c  list.mak  logging.c  logging.mak  mutex.c  mutex.mak  prefs.c  prefs.mak  syncqueue.c  syncqueue.mak  threads.c  threads.mak  torba.c  torba.mak
example/extensions/: CMakeLists.txt
example/extensions/xembed/: CMakeLists.txt  grid.c  xembed_app_test.c  xembed_test.c  xembed_window.c
example/graphics/: CMakeLists.txt  Makefile  graphics.c
example/media/: CMakeLists.txt  Makefile  media.c
example/player/: CMakeLists.txt  Makefile  player.c
example/sound/: CMakeLists.txt  Makefile  sound.c
example/system/: CMakeLists.txt  Makefile  system.c
example/video/: CMakeLists.txt  Makefile  overlay.c  overlay.mak  surface.c  surface.mak  video.c  video.mak
example/window/: CMakeLists.txt  Makefile  modals.c  modals.mak  widgets.c  widgets.mak  windows.c  windows.mak
extensions/: CMakeLists.txt  Makefile
extensions/xembed/: CMakeLists.txt  Makefile  av_xembed.c  av_xembed.h  av_xembed.mak  av_xembed_app.c  av_xembed_app.h  av_xembed_register.c  av_xembed_register.h  av_xembed_surface.c  av_xembed_surface.h  av_xembed_window.c  av_xembed_window.h  av_xembed_window_scale.c
include/: CMakeLists.txt  av.h  av_audio.h  av_bitmap.h  av_display.h  av_event.h  av_graphics.h  av_hash.h  av_input.h  av_keys.h  av_list.h  av_log.h  av_media.h  av_oop.h  av_player.h  av_prefs.h  av_rect.h  av_scripting.h  av_sound.h  av_sprite.h  av_stdc.h  av_surface.h  av_system.h  av_thread.h  av_timer.h  av_torb.h  av_tree.h  av_video.h  av_visible.h  av_window.h  avgl.h
lua/avgl/: __label.lua  rect.lua  scene.lua
lua/avgl/layout/: _hvbox.lua  hbox.lua  vbox.lua
lua/avgl/view/: _drawtext.lua  group.lua  label.lua  sprite.lua  view.lua
lua/samples/: sample_image.lua  sample_label.lua  sample_layout.lua
src/: CMakeLists.txt  Makefile  av_audio.c  av_bitmap.c  av_debug.h  av_display.c  av_event.c  av_graphics.c  av_input.c  av_media.c  av_player.c  av_rect.c  av_scaler.c  av_sound.c  av_sound_wave.c  av_sprite.c  av_surface.c  av_system.c  av_timer.c  av_video.c  av_visible.c  av_window.c  avgl.c  avgl.mak
src/audio/: av_audio_dfb.c  av_audio_sdl.c
src/cairo/: av_graphics_cairo.c  av_graphics_cairo.h  av_graphics_surface_cairo.c  av_graphics_surface_cairo.h
src/core/: av_hash.c  av_list.c  av_log.c  av_oop.c  av_prefs.c  av_stdc.c  av_thread.c  av_torb.c  av_tree.c
src/cursor/: beam.xpm  scroll.xpm  zoom.xpm
src/ffmpeg/: av_player_ffplay.c
src/graphics/: av_graphics_cairo.c  av_graphics_surface_cairo.c  av_graphics_surface_cairo.h
src/input/: av_input_dfb.c  av_input_sdl.c
src/lua/: lavgl.c  lavgl.h
src/media/ffmpeg/: av_media_ffmpeg.c
src/media/swscale/: av_scaler_swscale.c
src/player/: av_player_vlc.c  av_player_xine.c
src/scripting/: av_scripting.c
src/sdl/: av_audio_sdl.c  av_bitmap_sdl.c  av_bitmap_sdl.h  av_core_sdl.c  av_core_sdl.h  av_display_cursor_sdl.c  av_display_cursor_sdl.h  av_display_sdl.c  av_input_sdl.c  av_surface_sdl.c  av_surface_sdl.h  av_system_sdl.c  av_timer_sdl.c
src/sound/: av_sound_wave.c
src/system/: av_system_dfb.c  av_system_dfb.h  av_system_dfb_param.c  av_system_sdl.c  av_system_sdl.h  av_system_sdl_param.c
src/timer/: av_timer_dfb.c  av_timer_sdl.c
src/video/: av_display_cursor_sdl.c  av_display_sdl.c  av_display_sdl.h  av_video_cursor_sdl.c  av_video_cursor_sdl.h  av_video_dfb.c  av_video_dfb.h  av_video_sdl.c  av_video_sdl.h  av_video_surface_dfb.c  av_video_surface_overlay_buffered_sdl.c  av_video_surface_overlay_sdl.c  av_video_surface_sdl.c
src/video/cursor/: arrow.xpm  busy.xpm  hand.xpm  keyboard.xpm
test/: .cproject  .project  CMakeLists.txt  test.c  test.h  test_avgl.c  test_bitmap.c  test_event.c  test_oop.c  test_sprite.c  test_surface.c  test_visible.c  test_widgets.c  test_window.c
test/lua/: run_avgl.cmd  run_avgl.sh  simple.lua  test_avgl.cmd  test_avgl.lua  test_layout.cmd  test_layout.lua  test_moving.lua  test_sprite.lua
