# CMakeLists.txt
cmake_minimum_required(VERSION 2.6)
SET(PROJECT_NAME avgl)
PROJECT (${PROJECT_NAME})
OPTION(BUILD_SHARED_LIBS "Should shared libraries be the default?" YES )
SET(PLATFORM linux)

SET(${PROJECT_NAME}_INSTALL_DIR ${CMAKE_INSTALL_PREFIX}/bin)

SET(LIBS_DIR ${${PROJECT_NAME}_SOURCE_DIR}/lib)
SET(EXE_DIR ${${PROJECT_NAME}_SOURCE_DIR}/bin)

SET(LIBRARY_OUTPUT_PATH ${LIBS_DIR})
SET(EXECUTABLE_OUTPUT_PATH ${EXE_DIR})

INCLUDE_DIRECTORIES(
	${${PROJECT_NAME}_SOURCE_DIR}/include
	${${PROJECT_NAME}_SOURCE_DIR}/src
	${${PROJECT_NAME}_BINARY_DIR}
)

LINK_DIRECTORIES(${LIBS_DIR} /usr/local/lib /usr/lib /lib)

OPTION(WITH_PTHREADS "Build with pthreads" YES)
OPTION(WITH_XINE "Build with xine player" YES)
OPTION(WITH_FFMPEG "Build with ffmpeg" NO)
OPTION(WITH_VLC "Build with vlc" NO)
OPTION(WITH_SDL "Build with SDL system backend" YES)
OPTION(WITH_DIRECTFB "Build with DirectFB system backend" NO)
OPTION(WITH_CAIRO "Build with Cairo graphics" YES)
OPTION(CAIRO_DIRECTFB "Cairo is build with DirectFB support" NO)

IF(WITH_PTHREADS)
  ADD_DEFINITIONS(-DWITH_PTHREADS)
ENDIF(WITH_PTHREADS)

IF(WITH_XINE)
  ADD_DEFINITIONS(-DWITH_XINE)
ENDIF(WITH_XINE)

IF(WITH_FFMPEG)
	FIND_PATH(
		AVFORMAT_PATH
		libavformat/avformat.h
		PATHS
			/usr/local/include/ffmpeg
			/usr/local/include
			/usr/include/ffmpeg
			/usr/include
	)

	IF(AVFORMAT_PATH)
		ADD_DEFINITIONS(-DWITH_FFMPEG -DUSE_INCLUDE_LIBAVFORMAT)
		SET(SWSCALE_LIB swscale)
	ELSE(AVFORMAT_PATH)
		FIND_PATH(
			AVFORMAT_PATH
			ffmpeg/avformat.h
			PATHS
				/usr/local/include
				/usr/include
		)
		IF(AVFORMAT_PATH)
			ADD_DEFINITIONS(-DWITH_FFMPEG -DUSE_INCLUDE_FFMPEG)
		ENDIF(AVFORMAT_PATH)
	ENDIF(AVFORMAT_PATH)

	IF(NOT AVFORMAT_PATH)
		MESSAGE("avformat.h not found. Building without FFMPEG support")
	ENDIF(NOT AVFORMAT_PATH)
ENDIF(WITH_FFMPEG)

IF(WITH_VLC)
	ADD_DEFINITIONS(-DWITH_VLC)
ENDIF(WITH_VLC)

IF(WITH_SDL)
  ADD_DEFINITIONS(-DWITH_SYSTEM_SDL)
ENDIF(WITH_SDL)

IF(WITH_DIRECTFB)
  ADD_DEFINITIONS(-DWITH_SYSTEM_DIRECTFB)
ENDIF(WITH_DIRECTFB)

IF(WITH_CAIRO)
	ADD_DEFINITIONS(-DWITH_GRAPHICS_CAIRO)
	IF(WITH_DIRECTFB AND CAIRO_DIRECTFB)
		ADD_DEFINITIONS(-DCAIRO_HAS_DIRECTFB_SURFACE)
	ENDIF(WITH_DIRECTFB AND CAIRO_DIRECTFB)
ENDIF(WITH_CAIRO)

ADD_DEFINITIONS(
-W
-Wall
-Wcast-align
-Wmissing-prototypes
-Wstrict-prototypes
-Wnested-externs
-Wpointer-arith
-Wshadow
-Wwrite-strings
-Wcast-qual
-Waggregate-return
-Winline
-Wundef
-Wsign-compare
-Wredundant-decls
-g3
-ggdb3
-std=c99
)

SET(AV_INSTALL_PREFIX ${CMAKE_INSTALL_PREFIX})
SET(AV_INSTALL_PREFERENCES ${CMAKE_INSTALL_PREFIX}/etc/avgl.prefs)

CONFIGURE_FILE(${${PROJECT_NAME}_SOURCE_DIR}/av_config.h.in ${${PROJECT_NAME}_BINARY_DIR}/av_config.h)

INSTALL(FILES avgl.prefs avgl.xine.prefs DESTINATION etc
		PERMISSIONS OWNER_WRITE OWNER_READ
					GROUP_READ WORLD_READ)

SUBDIRS(include src extensions)
